edge-playground/deployment-tentacle-plc1-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tentacle-plc1-front
  name: tentacle-plc1-front
  namespace: edge-playground
spec:
  selector:
    matchLabels:
      app: tentacle-plc1-front
  replicas: 1
  template:
    metadata:
      labels:
        app: tentacle-plc1-front
    spec:
      containers:
      - image: joyja/tentacle-plc-front:v0.0.13-dev
        name: tentacle-plc1-front
        imagePullPolicy: Always
