edge-playground/statefulset-ignition-makers1.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: ignition-makers1
  name: ignition-makers1
  namespace: edge-playground
spec:
  selector:
    matchLabels:
      app: ignition-makers1
  serviceName: ignition-makers1
  replicas: 1
  template:
    metadata:
      labels:
        app: ignition-makers1
    spec:
      containers:
      - name: ignition-makers1
        image: docker.io/kcollins/ignition:8.1.12
        volumeMounts:
        - name: ignition-makers1-pvc
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: ignition-makers1-pvc
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 2Gi
      storageClassName: csi-rbd-sc
