edge-playground/statefulset-ignition-makers2.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: ignition-makers2
  name: ignition-makers2
  namespace: edge-playground
spec:
  selector:
    matchLabels:
      app: ignition-makers2
  serviceName: ignition-makers2
  replicas: 1
  template:
    metadata:
      labels:
        app: ignition-makers2
    spec:
      containers:
      - name: ignition-makers2
        image: docker.io/kcollins/ignition:8.1.18
        volumeMounts:
        - name: ignition-makers2-pvc
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: ignition-makers2-pvc
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 2Gi
      storageClassName: csi-rbd-sc
