edge-playground/statefulset-pgadmin1.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: pgadmin1
  name: pgadmin1
  namespace: edge-playground
spec:
  selector:
    matchLabels:
      app: pgadmin1
  serviceName: pgadmin1
  replicas: 1
  template:
    metadata:
      labels:
        app: pgadmin1
    spec:
      containers:
      - name: pgadmin1
        image: docker.io/dpage/pgadmin4:6.12
        volumeMounts:
        - name: pgadmin1-pvc
          mountPath: /var/lib/pgadmin
  volumeClaimTemplates:
  - metadata:
      name: pgadmin1-pvc
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
      storageClassName: csi-rbd-sc
