edge-playground/statefulset-postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: postgresql1
  name: postgresql1
  namespace: edge-playground
spec:
  selector:
    matchLabels:
      app: postgresql1
  serviceName: postgresql1
  replicas: 1
  template:
    metadata:
      labels:
        app: postgresql1
    spec:
      containers:
      - name: postgresql1
        image: docker.io/timescale/timescaledb:2.7.2-pg14
        imagePullPolicy: Always
        volumeMounts:
        - name: postgresql1-pvc
          mountPath: /var/lib/postgresql
  volumeClaimTemplates:
  - metadata:
      name: postgresql1-pvc
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
      storageClassName: csi-rbd-sc
