edge-playground/statefulset-tentacle-plc1-codeserver.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: tentacle-plc1-codeserver
  name: tentacle-plc1-codeserver
  namespace: edge-playground
spec:
  selector:
    matchLabels:
      app: tentacle-plc1-codeserver
  serviceName: tentacle-plc1-codeserver
  replicas: 1
  template:
    metadata:
      labels:
        app: tentacle-plc1-codeserver
    spec:
      securityContext:
        runAsUser: 0
      containers:
      - image: codercom/code-server:4.5.0
        name: tentacle-plc1-codeserver
        volumeMounts:
          - mountPath: /home/coder/project
            name: tentacle-plc1-pv
          - mountPath: /home/coder/.config
            name: tentacle-plc1-codeserver
      volumes:
      - name: tentacle-plc1-pv
        persistentVolumeClaim:
          claimName: tentacle-plc1-pvc-tentacle-plc1-0
  volumeClaimTemplates:
  - metadata:
      name: tentacle-plc1-codeserver
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 2Gi
      storageClassName: csi-rbd-sc
