edge-playground/statefulset-tentacle-plc1.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: tentacle-plc1
  name: tentacle-plc1
  namespace: edge-playground
spec:
  selector:
    matchLabels:
      app: tentacle-plc1
  serviceName: tentacle-plc1
  replicas: 1
  template:
    metadata:
      labels:
        app: tentacle-plc1
    spec:
      containers:
      - name: tentacle-plc1
        image: docker.io/joyja/tentacle-plc:v0.0.11-dev
        volumeMounts:
        - name: tentacle-plc1-pvc
          mountPath: /tentacle/runtime
  volumeClaimTemplates:
  - metadata:
      name: tentacle-plc1-pvc
    spec:
      accessModes:
      - ReadWriteMany
      resources:
        requests:
          storage: 2Gi
      storageClassName: csi-cephfs-sc
