edge-playground/ingress-ignition-makers1.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-ignition-makers1
  namespace: edge-playground
spec:
  selector:
    name: ignition-makers1
  type: LoadBalancer
  # loadBalancerIP is optional. MetalLB will automatically allocate an IP 
  # from its pool if not specified. You can also specify one manually.
  # loadBalancerIP: x.y.z.a
  ports:
    - name: http
      protocol: TCP
      port: 8088
      targetPort: 8088
    - name: https
      protocol: TCP
      port: 8043
      targetPort: 8043
