edge-playground/service-codesys.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: codesys
  name: codesys
  namespace: edge-playground
spec:
  ports:
  - port: 4840
    protocol: TCP
    targetPort: 4840
  selector:
    app: codesys
  sessionAffinity: None
  type: ClusterIP
