edge-playground/service-pgadmin1.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pgadmin1
  name: pgadmin1
  namespace: edge-playground
spec:
  ports:
  - port: 5050
    protocol: TCP
    targetPort: 80
  selector:
    app: pgadmin1
  sessionAffinity: None
  type: ClusterIP
