edge-playground/service-tentacle-plc1-codeserver.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tentacle-plc1-codeserver
  name: tentacle-plc1-codeserver
  namespace: edge-playground
spec:
  ports:
  - port: 8080
    name: http
    protocol: TCP
    targetPort: 8080
  selector:
    app: tentacle-plc1-codeserver
  sessionAffinity: None
  type: NodePort
