edge-playground/service-tentacle-plc1-front.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tentacle-plc1-front
  name: tentacle-plc1-front
  namespace: edge-playground
spec:
  ports:
  - port: 3000
    name: http
    protocol: TCP
    targetPort: 3000
  selector:
    app: tentacle-plc1-front
  sessionAffinity: None
  type: ClusterIP
