edge-playground/service-tentacle-plc1.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tentacle-plc1
  name: tentacle-plc1
  namespace: edge-playground
spec:
  ports:
  - port: 4000
    name: http
    protocol: TCP
    targetPort: 4000
  selector:
    app: tentacle-plc1
  sessionAffinity: None
  type: ClusterIP
