edge-playground/ingress-ignition-makers2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ignition-makers2
  namespace: edge-playground
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
spec:
  rules:
  - host: ignition-makers2.internal1.jarautomation.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ignition-makers2
            port: 
              number: 8088
