edge-playground/ingress-tentacle-plc1-front.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tentacle-plc1-front
  namespace: edge-playground
spec:
  rules:
  - host: tentacle-plc1.internal1.jarautomation.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tentacle-plc1-front
            port: 
              number: 3000
