edge-playground/ingress-tentacle-plc1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tentacle-plc1
  namespace: edge-playground
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: tentacle-plc1.internal1.jarautomation.io
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: tentacle-plc1
            port: 
              number: 4000
      - path: /codeserver(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: tentacle-plc1-codeserver
            port: 
              number: 8080
